--- a/scss/price.scss
+++ b/scss/price.scss
@@ -83,7 +83,6 @@ header{
 
 // section-plan
 #section-plan{
-    overflow: hidden;
     .container{
         position: relative;
         z-index: 2;
